Network/nginx-external-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external                #annotations are where the things become different. Read more about annotations here https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/.
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing       #annotations are where the things become different. Read more about annotations here https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/.
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - port: 80 # The port where the service is accessible
    targetPort: 80 # The port on the container that receives traffic
