Network/nginx-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
spec:
  selector:
    app: nginx # This must match the 'app: nginx' label in the Deployment template
  type: NodePort
  ports:
  - protocol: TCP
    port: 80 # The port for the service
    targetPort: 80 # The port on the pod
