Network/ingress-non-controller-managed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "nginx-ingress-non-controller-managed"
  namespace: "default"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: nginx
spec:
  ingressClassName: alb-non-controller
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: "nginx-cluster-ip-service"
                port:
                  number: 80
